# actix-web-example

./: .gitignore  readme.md
adv-auth/: Cargo.toml
advanced-crud/: Cargo.toml
advanced-crud/src/: db.rs  error.rs  handlers.rs  main.rs
auth/: Cargo.toml
auth-dev/: .env  Cargo.toml
auth-dev/migrations/: 20260719161611_users.up.sql  20260719162101_invitations.down.sql  20260719162101_invitations.up.sql
auth-dev/src/: errors.rs  main.rs  models.rs
auth/migrations/: 20260720054115_users.up.sql
auth/src/: db.rs  error.rs  helper.rs  main.rs  models.rs  routes.rs
basic-crud/: .env.example  Cargo.toml  readme.md
basic-crud/migrations/: 20260707195009_change.sql
basic-crud/src/: main.rs
blog/: Cargo.toml
blog/src/: auth.rs  db.rs  error.rs  handlers.rs  main.rs
blogify/: Cargo.toml
blogify/src/: auth.rs  db.rs  error.rs  helpers.rs  main.rs
