[package]
name = "advanced-crud"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.14.0"
dotenvy = "0.15.7"
serde = "1.0.228"
serde_json = "1.0.150"
sqlx = { version = "0.9", features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "migrate",
    "tls-rustls-ring"
] }
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
uuid = "1.23.4"
