[package]
name = "auth-dev"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-identity = "0.4"
actix-web = "4.0"
chrono = { version = "0.4", features = ["serde"] }
derive_more = { version = "2.1", features = ["display"] }
diesel = { version = "1.4", features = ["postgres", "uuidv07", "r2d2", "chrono"] }
dotenv = "0.15"
env_logger = "0.9"
futures = "0.3.8"
lazy_static = "1.4"
r2d2 = "0.8"
rust-argon2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sparkpost = "0.5"
uuid = { version = "0.8", features = ["serde", "v4"] }
time = "0.3"
sqlx = { version = "0.9", features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "migrate",
    "tls-rustls-ring"
] }
dotenvy = "0.15.7"
tracing-subscriber = "0.3.23"
thiserror = "2.0.19"
anyhow = "1.0.104"
tracing = "0.1.44"
