[package]
name = "basic-crud"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.14.0"
chrono = "0.4.45"
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9", features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "migrate",
    "tls-rustls-ring"
] }
tracing-subscriber = "0.3.23"
uuid = "1.23.4"
