[package]
name = "blog"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-session = { version = "0.11.0", features = ["cookie-session"] }
actix-web = "4.14.0"
anyhow = "1.0.103"
argon2 = "0.5.3"
chrono = "0.4.45"
colored = "3.1.1"
dotenvy = "0.15.7"
serde = "1.0.228"
serde_json = "1.0.150"
sqlx = { version = "0.9", features = ["runtime-tokio", "postgres", "macros", "migrate", "tls-rustls-ring", "uuid"] }
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
uuid = { version = "1.23.4", features = ["v4", "serde"] }
