[package]
name = "blogify"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.14.0"
anyhow = "1.0.103"
argon2 = "0.5.3"
chrono = "0.4.45"
dotenvy = "0.15.7"
serde = "1.0.228"
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["postgres"] }
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
